--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <form class="add-task">
       <input class="add-task__text" type="text" name="new-task" id="new-task" placeholder="Digite aqui sua tarefa">
-      <button type="button" class="add-task__action">add</button>
+      <button onclick="add ()" type="button" class="add-task__action">add</button>
     </form>
 
     <ul class="task-list">
