--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </form>
 
     <ul class="task-list">
-      <li class="task-list__item">estudar html</li>
+      <li class="task-list__item">estudar html</li>''
       <li class="task-list__item">estudar css</li>
       <li class="task-list__item">estudar bootstrap</li>
       <li class="task-list__item">fazer atividade de lista de tarefas</li>
