--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <form class="add-task">
       <input class="add-task__text" type="text" name="new-task" id="new-task" placeholder="Digite aqui sua tarefa">
-      <button onclick="add ()" type="button" class="add-task__action">add</button>
+      <button onclick="add (incluir)" type="button" class="add-task__action">add</button>
     </form>
 
     <ul class="task-list">
-      <li class="task-list__item">estudar html</li>''
+      <li class="task-list__item">estudar html</li>
       <li class="task-list__item">estudar css</li>
       <li class="task-list__item">estudar bootstrap</li>
       <li class="task-list__item">fazer atividade de lista de tarefas</li>
