--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
   <main class="container">
 
     <h1 class="title">Lista de tarefas</h1>
-
     <form class="add-task">
-      <input class="add-task__text" type="text" name="new-task" id="new-task" placeholder="Digite aqui sua tarefa">
-      <button onclick="add (incluir)" type="button" class="add-task__action">add</button>
-    </form>
+        <input class="add-task__text" type="text" name="new-task" id="new-task" placeholder="Digite aqui sua tarefa">
+        <button id="add-task-button" type="button" class="add-task__action">
+          add
+        </button>
 
-    <ul class="task-list">
-      <li class="task-list__item">estudar html</li>
-      <li class="task-list__item">estudar css</li>
-      <li class="task-list__item">estudar bootstrap</li>
-      <li class="task-list__item">fazer atividade de lista de tarefas</li>
-    </ul>
-
+        <ul class="task-list">
+          <li class="task-list__item">estudar html</li>
+          <li class="task-list__item">estudar css</li>
+          <li class="task-list__item">estudar bootstrap</li>
+          <li class="task-list__item">fazer atividade de lista de tarefas</li>
+        </ul>
   </main>
   <script src="index.js"></script>
 </body>
