--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lista de tarefas</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat|Modak&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="index.css">
 </head>
@@ -19,14 +20,27 @@
         <button id="add-task-button" type="button" class="add-task__action">
           add
         </button>
+    </form>
 
         <ul class="task-list">
-          <li class="task-list__item">estudar html</li>
-          <li class="task-list__item">estudar css</li>
-          <li class="task-list__item">estudar bootstrap</li>
-          <li class="task-list__item">fazer atividade de lista de tarefas</li>
+          <li class="task-list__item">
+            Acordar
+          <button  class="task-list_action" type="button">
+            <i class="fas fa-check-square"></i>
+          </li>
+          </button> 
+        </ul>
+        <ul class="task-list">
+          <li class="task-list__item--done">
+            Escovar
+          <button  class="task-list_action" type="button">
+            <i class="fas fa-undo-alt"></i>
+          </li>
+          </button> 
         </ul>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
+  crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </body>
 
