--- a/jquery.html
+++ b/jquery.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="jquery.css">
     <title>jquery</title>
 </head>
 <body>
     <h1> teste com jQuery</h1>
     <div class="container" >
-        <button id="mostrar" onclick="" >mostrar</button>
-        <button id="esconder" onclick="" >esconder</button>
-        <p id="p1">mmmdhhhfiijue dnfdgvsbcjbj hfhfmdbugfv bdggfeejjbsjbhgyewvgfhbdbgt nhehvtffdeehbhsdgcjsgctvhb </p>
-        <img src="https://www.casasbahia-imagens.com.br/Control/ArquivoExibir.aspx?IdArquivo=1298193568">
+        <button id="mostrar">mostrar</button>
+        <button id="esconder">esconder</button>
+        <p id="p1">é a resultante do processamento, manipulação e organização de dados, de tal forma que represente uma modificação (quantitativa ou qualitativa) no conhecimento do sistema (humano, animal ou máquina) que a recebe.[1]
+                   Le Coadic, pesquisador da área da Ciência da Informação, destaca que o valor da informação varia conforme o indivíduo, as necessidades e o contexto em que é produzida e compartilhada. Uma informação pode ser altamente relevante para um indivíduo e a mesma informação pode não ter significado algum para outro indivíduo.[2]
+                   Informação enquanto conceito carrega uma diversidade de significados, do uso quotidiano ao técnico. Genericamente, o conceito de informação está intimamente ligado às noções de restrição, comunicação, controle, dados, forma, instrução, conhecimento, significado, estímulo, padrão, percepção e representação de conhecimento
+        </p>
+        <img id="img" src="https://www.casasbahia-imagens.com.br/Control/ArquivoExibir.aspx?IdArquivo=1222941789" width="500px" alt="televisão">
     </div>
     
 
