--- a/jquery.html
+++ b/jquery.html
@@ -15,7 +15,7 @@
                    Le Coadic, pesquisador da área da Ciência da Informação, destaca que o valor da informação varia conforme o indivíduo, as necessidades e o contexto em que é produzida e compartilhada. Uma informação pode ser altamente relevante para um indivíduo e a mesma informação pode não ter significado algum para outro indivíduo.[2]
                    Informação enquanto conceito carrega uma diversidade de significados, do uso quotidiano ao técnico. Genericamente, o conceito de informação está intimamente ligado às noções de restrição, comunicação, controle, dados, forma, instrução, conhecimento, significado, estímulo, padrão, percepção e representação de conhecimento
         </p>
-        <img id="img" src="https://www.casasbahia-imagens.com.br/Control/ArquivoExibir.aspx?IdArquivo=1222941789" width="500px" alt="televisão">
+        <img id="img" src="https://www.casasbahia-imagens.com.br/Control/ArquivoExibir.aspx?IdArquivo=1222941789" width="200px" alt="televisão" style="opacity: 0.5;">
     </div>
     
 
